# comet

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.md.tmp  comet-config.example.toml  comet-config.toml  schema.sql  sqlx-data.json
migrations/: migrator.py
migrations/sql/: dashboard_fields.sql
src/: main.rs  models.rs  settings.rs  utils.rs
src/routes/: delete_file.rs  get_file.rs  mod.rs  pineapple.rs  ping.rs  upload_file.rs
ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
ui/src/: main.ts
ui/src/components/: ContextMenu.vue  FileItem.vue  FileTable.vue
ui/src/icons/: DeleteIcon.vue  DownloadIcon.vue  FileIcon.vue  FolderIcon.vue  FolderOpenIcon.vue  InfoIcon.vue  RenameIcon.vue  ShareIcon.vue  ThreeDots.vue  index.ts
ui/src/lib/comet/: index.ts  types.ts
ui/src/router/: index.ts
ui/src/utils/: index.ts  sort.ts
ui/src/views/: CometView.vue  SettingsView.vue
